--- a/src/pages/auth/Login.module.css
+++ b/src/pages/auth/Login.module.css
@@ -1,5 +1,7 @@
 .card {
   display: flex;
+  min-height: 100vh;
+  padding: 0 1.5rem;
   flex-direction: column;
 }
 
@@ -11,14 +13,14 @@
   margin-bottom: 3.65rem;
 }
 
-form {
+.authForm {
   padding: 1.5rem;
   min-height: 22.8125rem;
   border-radius: 0.625rem;
   background: var(--form-background);
 }
 
-.actionText {
+.heading {
   font-size: 2rem;
   margin-bottom: 2.5rem;
   letter-spacing: -0.03125rem;
@@ -68,14 +70,26 @@ button {
   color: var(--button-red);
 }
 
-@media screen and (min-width: 50rem) {
+@media screen and (min-width: 40rem) {
   .card {
-    min-width: 25rem;
-    min-height: 26.125rem;
+    padding: 0;
   }
 
   .logo {
-    margin-top: 0;
+    margin-top: 5rem;
+    margin-bottom: 4.53em;
+  }
+
+  .authForm {
+    width: 25rem;
+    align-self: center;
+    min-height: 23.3125rem;
+  }
+}
+
+@media screen and (min-width: 50rem) {
+  .logo {
+    margin-top: 4.9rem;
     margin-bottom: 5.19rem;
   }
 
