--- a/src/pages/app/HomePage.module.css
+++ b/src/pages/app/HomePage.module.css
@@ -13,8 +13,8 @@
 .trendingHeading,
 .recommendedHeading {
   font-size: 1.25rem;
-  line-height: normal;
   margin-bottom: 1rem;
+  line-height: normal;
   letter-spacing: -0.0195rem;
   font-weight: var(--small-font);
 }
@@ -22,9 +22,8 @@
 .trendingList {
   gap: 1rem;
   display: flex;
-  overflow: auto;
-  height: 8.75rem;
-  flex-wrap: nowrap;
+  overflow-x: auto;
+  white-space: nowrap;
 }
 
 .trendingList {
@@ -38,12 +37,18 @@
 }
 
 .trendingItem {
-  height: 100%;
   width: 15rem;
+  height: 100%;
   display: flex;
   flex: 0 0 auto;
+  height: 8.75rem;
   position: relative;
-  display: inline-block;
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  border-radius: 0.5rem;
 }
 
 .recommendedHeading {
@@ -65,25 +70,26 @@
   margin-bottom: 0.5rem;
 }
 
-img {
-  width: 100%;
-  height: 100%;
-  border-radius: 0.5rem;
-}
-
-.bookmarkIcon {
+.trendbookmarkIcon {
   width: 2rem;
   top: 0.5rem;
   height: 2rem;
   right: 0.5rem;
-  display: block;
+  display: flex;
   border-radius: 50%;
   position: absolute;
-  border: 0.5px solid var(--text-color);
+  align-items: center;
+  justify-content: center;
+  border: 0.2px solid var(--text-color);
+}
+
+.bookmark {
+  display: flex;
+  width: 0.729rem;
+  height: 0.875rem;
 }
 
 .movieDetails {
-  width: 100%;
   gap: 0.38rem;
   opacity: 0.75;
   display: flex;
@@ -93,6 +99,7 @@ img {
 }
 
 .movieYear {
+  font-size: 0.875rem;
   font-weight: var(--small-font);
 }
 
@@ -124,11 +131,11 @@ img {
 @media screen and (min-width: 40rem) {
   .trendingList {
     gap: 2.5rem;
-    height: 14.375rem;
   }
 
   .trendingItem {
     width: 29.375rem;
+    height: 14.375rem;
   }
 
   .recommendedList {
@@ -146,16 +153,24 @@ img {
     top: 1rem;
     right: 1rem;
   }
+
+  .movieDetails {
+    font-size: 0.8125rem;
+  }
+
+  .movieTitle {
+    font-size: 1.125rem;
+  }
 }
 
 @media screen and (min-width: 65rem) {
-  .movie {
-    height: 10.875rem;
-  }
-
   .recommendedList {
     row-gap: 2rem;
     column-gap: 2.5rem;
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .movie {
+    height: 10.875rem;
   }
 }
