--- a/src/pages/auth/Auth.module.css
+++ b/src/pages/auth/Auth.module.css
@@ -3,12 +3,13 @@
   min-height: 100vh;
   padding: 0 1.5rem;
   flex-direction: column;
+  justify-content: center;
 }
 
 .logo {
   width: 2rem;
   height: 1.6rem;
-  margin-top: 3rem;
+  /* margin-top: 3rem; */
   align-self: center;
   margin-bottom: 3.65rem;
 }
@@ -70,13 +71,17 @@ button {
   color: var(--button-red);
 }
 
+.link {
+  text-decoration: none;
+}
+
 @media screen and (min-width: 40rem) {
   .card {
     padding: 0;
   }
 
   .logo {
-    margin-top: 5rem;
+    /* margin-top: 5rem; */
     margin-bottom: 4.53em;
   }
 
@@ -89,7 +94,7 @@ button {
 
 @media screen and (min-width: 50rem) {
   .logo {
-    margin-top: 4.9rem;
+    /* margin-top: 4.9rem; */
     margin-bottom: 5.19rem;
   }
 
