--- a/src/pages/app/AppPages.module.css
+++ b/src/pages/app/AppPages.module.css
@@ -11,7 +11,7 @@
 }
 
 .trendingHeading,
-.recommendedHeading {
+.catalogueHeading {
   font-size: 1.25rem;
   margin-bottom: 1rem;
   line-height: normal;
@@ -51,11 +51,11 @@ img {
   border-radius: 0.5rem;
 }
 
-.recommendedHeading {
+.catalogueHeading {
   margin-bottom: 1.5rem;
 }
 
-.recommendedList {
+.catalogueList {
   width: 100%;
   display: grid;
   row-gap: 1rem;
@@ -70,20 +70,21 @@ img {
   margin-bottom: 0.5rem;
 }
 
-.trendbookmarkIcon {
+.bookmarkCircle {
   width: 2rem;
   top: 0.5rem;
   height: 2rem;
-  right: 0.5rem;
   display: flex;
+  right: 0.5rem;
+  opacity: 0.5006;
   border-radius: 50%;
   position: absolute;
   align-items: center;
   justify-content: center;
-  border: 0.2px solid var(--text-color);
+  background-color: var(--background);
 }
 
-.bookmark {
+.bookmarkIcon {
   display: flex;
   width: 0.729rem;
   height: 0.875rem;
@@ -138,7 +139,7 @@ img {
     height: 14.375rem;
   }
 
-  .recommendedList {
+  .catalogueList {
     row-gap: 1.5rem;
     column-gap: 1.81rem;
     grid-template-rows: auto;
@@ -164,7 +165,7 @@ img {
 }
 
 @media screen and (min-width: 65rem) {
-  .recommendedList {
+  .catalogueList {
     row-gap: 2rem;
     column-gap: 2.5rem;
     grid-template-columns: repeat(4, minmax(0, 1fr));
