--- a/src/pages/app/AppPages.module.css
+++ b/src/pages/app/AppPages.module.css
@@ -1,19 +1,22 @@
 .card {
-  padding: 1.56rem;
+  padding: 0 1rem 3.81rem 1rem;
 }
 
 .search {
-  margin-bottom: 1.63rem;
+  margin-bottom: 1.62rem;
 }
 
 .trending {
   margin-bottom: 1.5rem;
 }
 
+.trendingHeading {
+  margin-bottom: 1rem;
+}
+
 .trendingHeading,
 .catalogueHeading {
   font-size: 1.25rem;
-  margin-bottom: 1rem;
   line-height: normal;
   letter-spacing: -0.0195rem;
   font-weight: var(--small-font);
@@ -51,6 +54,10 @@ img {
   border-radius: 0.5rem;
 }
 
+.catalogueBookmark {
+  margin-bottom: 1.5rem;
+}
+
 .catalogueHeading {
   margin-bottom: 1.5rem;
 }
@@ -76,7 +83,7 @@ img {
   height: 2rem;
   display: flex;
   right: 0.5rem;
-  opacity: 0.5006;
+  opacity: 0.7006;
   border-radius: 50%;
   position: absolute;
   align-items: center;
@@ -114,6 +121,7 @@ img {
 
 .iconWrap {
   display: flex;
+  width: 3.1rem;
   align-items: center;
   justify-content: space-between;
 }
@@ -130,6 +138,18 @@ img {
 }
 
 @media screen and (min-width: 40rem) {
+  .navCard {
+    padding: 1.44rem 1.56rem 0 1.56rem;
+  }
+
+  .card {
+    padding: 0 1.56rem 3.5rem 1.56rem;
+  }
+
+  .trendingHeading {
+    margin-bottom: 1.56rem;
+  }
+
   .trendingList {
     gap: 2.5rem;
   }
@@ -137,6 +157,10 @@ img {
   .trendingItem {
     width: 29.375rem;
     height: 14.375rem;
+  }
+
+  .catalogueBookmark {
+    margin-bottom: 3rem;
   }
 
   .catalogueList {
@@ -165,6 +189,22 @@ img {
 }
 
 @media screen and (min-width: 65rem) {
+  .navCard {
+    padding: 0;
+  }
+
+  .card {
+    padding: 4.06rem 0 2rem 9.25rem;
+  }
+
+  .catalogueBookmark {
+    margin-bottom: 2.5rem;
+  }
+
+  .catalogueHeading {
+    margin-bottom: 2rem;
+  }
+
   .catalogueList {
     row-gap: 2rem;
     column-gap: 2.5rem;
