--- a/src/components/navigation/Navigation.module.css
+++ b/src/components/navigation/Navigation.module.css
@@ -1,9 +1,8 @@
-.card {
+.navbar {
   display: flex;
   height: 3.5rem;
   padding: 0 1rem;
   align-items: center;
-  margin-bottom: 1.62rem;
   border-radius: 0.625rem;
   justify-content: space-between;
   background: var(--form-background);
@@ -38,16 +37,11 @@
 }
 
 @media screen and (min-width: 65rem) {
-  .card {
-    top: 2rem;
-    margin: 0;
-    padding: 0;
-    left: 2rem;
+  .navbar {
     width: 5rem;
     gap: 4.69rem;
-    height: 51rem;
+    height: 75vh;
     padding: 2.21rem 0;
-    position: absolute;
     flex-direction: column;
     justify-content: flex-start;
   }
@@ -59,6 +53,6 @@
   }
 
   .imageWrap {
-    justify-self: flex-end;
+    margin-top: auto;
   }
 }
