--- a/src/components/movie-card/movieCard.module.css
+++ b/src/components/movie-card/movieCard.module.css
@@ -7,13 +7,14 @@
 .thumbnail {
   width: 100%;
   height: 100%;
-  display: flex;
+  overflow: hidden;
+  border-radius: 0.5rem;
 }
 
-.thumbnail img {
+.thumbnailImage {
   width: 100%;
   height: 100%;
-  border-radius: 0.5rem;
+  transition: transform 0.4s ease-in;
 }
 
 .bookmarkIconCircle {
@@ -113,22 +114,23 @@
 
 @media screen and (min-width: 65rem) {
   .movie {
+    cursor: pointer;
     height: 10.875rem;
   }
 
   .playIcon {
     top: 50%;
     left: 50%;
-    gap: 1.19rem;
+    opacity: 1;
     height: 3rem;
-    opacity: 0.55;
+    gap: 1.19rem;
     display: none;
     width: 7.3125rem;
     position: absolute;
     align-items: center;
-    background: orangered;
     border-radius: 1.78125rem;
     transform: translate(-50%, -50%);
+    background: var(--button-background);
   }
 
   .play {
@@ -141,6 +143,10 @@
   .movie:hover {
     .playIcon {
       display: flex;
+    }
+
+    .thumbnailImage {
+      transform: scale(1.05);
     }
   }
 }
