--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 :root {
   /* defining fonts as variables */
   --small-font: 400;
@@ -8,13 +14,11 @@
   --text-color: rgba(255, 255, 255, 1);
   --input-border: rgba(90, 105, 143, 1);
   --form-background: rgba(22, 29, 47, 1);
+  --button-background: rgba(255, 255, 255, 0.25);
 }
 
 body {
-  margin: 0;
-  padding: 0;
   max-width: 100vw;
-  box-sizing: border-box;
   color: var(--text-color);
   background: var(--background);
   font-family: "Outfit", sans-serif;
