--- a/src/pages/app/AppPages.module.css
+++ b/src/pages/app/AppPages.module.css
@@ -1,71 +1,15 @@
-.trending {
+.card:first-child {
   margin-bottom: 1.5rem;
-}
-
-.trendingHeading {
-  margin-bottom: 1rem;
-}
-
-.trendingHeading,
-.catalogueHeading {
-  font-size: 1.25rem;
-  line-height: normal;
-  letter-spacing: -0.0195rem;
-  font-weight: var(--small-font);
-}
-
-.trendingList {
-  gap: 1rem;
-  display: flex;
-  overflow-x: auto;
-  white-space: nowrap;
-  -webkit-overflow-scrolling: touch;
-}
-
-.trendingList {
-  &::-webkit-scrollbar {
-    display: none;
-  }
-}
-
-.catalogueHeading {
-  margin-bottom: 1.5rem;
-}
-
-.catalogueList {
-  width: 100%;
-  display: grid;
-  row-gap: 1rem;
-  column-gap: 0.94rem;
-  grid-template-rows: auto;
-  grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
 @media screen and (min-width: 40rem) {
-  .trendingHeading {
-    margin-bottom: 1.56rem;
-  }
-
-  .trendingList {
-    gap: 2.5rem;
-  }
-
-  .catalogueList {
-    row-gap: 1.5rem;
-    column-gap: 1.81rem;
-    grid-template-rows: auto;
-    grid-template-columns: repeat(3, minmax(0, 1fr));
+  .card:first-child {
+    margin-bottom: 3rem;
   }
 }
 
 @media screen and (min-width: 65rem) {
-  .catalogueHeading {
-    margin-bottom: 2rem;
-  }
-
-  .catalogueList {
-    row-gap: 2rem;
-    column-gap: 2.5rem;
-    grid-template-columns: repeat(4, minmax(0, 1fr));
+  .card:first-child {
+    margin-bottom: 2.5rem;
   }
 }
