--- a/src/components/movies-catalogue/moviesCatalogue.module.css
+++ b/src/components/movies-catalogue/moviesCatalogue.module.css
@@ -15,12 +15,20 @@
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
 
+.bookmarkedMovies {
+  margin-bottom: 1.5rem;
+}
+
 @media screen and (min-width: 40rem) {
   .catalogue {
     row-gap: 1.5rem;
     column-gap: 1.81rem;
     grid-template-rows: auto;
     grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+
+  .bookmarkedMovies {
+    margin-bottom: 3rem;
   }
 }
 
@@ -33,5 +41,9 @@
     row-gap: 2rem;
     column-gap: 2.5rem;
     grid-template-columns: repeat(4, minmax(0, 1fr));
+  }
+
+  .bookmarkedMovies {
+    margin-bottom: 2.5rem;
   }
 }
